feat: remove personal account, join company
